added angular functionality

--- a/index-content.html
+++ b/index-content.html
@@ -4,6 +4,21 @@
 </md-toolbar>
 <h2>Full Stack Web Developer</h2>
 <div flex layout="row">
-  <md-sidenav md-is-locked-open="true" class="md-whiteframe-z2"></md-sidenav>
+  <md-sidenav md-is-locked-open="true" class="md-whiteframe-z2">
+    <md-list>
+      <md-list-item>
+        <md-button>
+          <md-icon md-svg-src="./assets/svg/avatar-1.svg" class="avatar">Lia Luogo</md-icon>
+        </md-button>
+      </md-list-item>
+      <md-list-item>
+        <md-button>
+          <md-icon md-svg-src="./assets/svg/avatar-4.svg" class="avatar">Lawrence Ray</md-icon>
+        </md-button>
+      </md-list-item>
+    </md-list>
+    <md-content flex id="content"></md-content>
+    <md-icon md-svg-src="./assets/svg/avatar-1.svg" class="avatar"></md-icon>
+  </md-sidenav>
   <md-content flex id="content"></md-content>
 </div>
