--- a/index-content.html
+++ b/index-content.html
@@ -1,24 +1,26 @@
 
 <md-toolbar layout="row">
-  <h1>Steven Bell</h1>
+  <h3>Steven Bell - Full Stack Web Developer</h3>
+  <md-button aria-label="Show User List" hide-gt-sm ng-click="ul.toggleList()" class="menu">
+    <md-icon md-svg-icon="menu"></md-icon>
+  </md-button>
 </md-toolbar>
-<h2>Full Stack Web Developer</h2>
-<div flex layout="row">
-  <md-sidenav md-is-locked-open="true" class="md-whiteframe-z2">
+<div flex layout="row"><!-- Wireframe Container #3 -->
+  <md-sidenav md-is-locked-open="$mdMedia('gt-sm')" md-component-id="left" ng-click="ul.toggleList()">
     <md-list>
-      <md-list-item>
-        <md-button>
-          <md-icon md-svg-src="./assets/svg/avatar-1.svg" class="avatar">Lia Luogo</md-icon>
-        </md-button>
-      </md-list-item>
-      <md-list-item>
-        <md-button>
-          <md-icon md-svg-src="./assets/svg/avatar-4.svg" class="avatar">Lawrence Ray</md-icon>
+      <md-list-item ng-repeat="it in ul.users">
+        <md-button ng-click="ul.selectUser(it)" ng-class="{'selected' : it === ul.selected }">
+          <md-icon md-svg-icon="{{it.avatar}}" class="avatar"></md-icon>{{it.name}}
         </md-button>
       </md-list-item>
     </md-list>
-    <md-content flex id="content"></md-content>
-    <md-icon md-svg-src="./assets/svg/avatar-1.svg" class="avatar"></md-icon>
   </md-sidenav>
-  <md-content flex id="content"></md-content>
+  <md-content flex id="content">
+    <md-icon md-svg-icon="{{ul.selected.avatar}}" class="avatar"></md-icon>
+    <md-button aria-label="Share with {{ ul.selected.name }}" md-no-ink ng-click="ul.makeContact(ul.selected)" class="share">
+      <md-icon md-svg-icon="share"></md-icon>
+    </md-button>
+    <h2>{{ul.selected.name}}</h2>
+    <p>{{ul.selected.content}}</p>
+  </md-content>
 </div>
